<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TimeTableApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="CourseName">CourseName</string>
    <string name="course_name">Course Name</string>
    <string name="room_num">00.00.00</string>
    <string name="start_time">00:00</string>
    <string name="end_time">00:00</string>
    <string name="description">Description text</string>

</resources>
