<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDDDD7" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/white_box_class" />

    <TextView
        android:id="@id/course_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="125dp"
        android:text="@string/course_name" />

    <TextView
        android:id="@+id/room_num_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/course_name"
        android:layout_below="@id/course_name"
        android:text="@string/room_num" />

    <TextView
        android:id="@+id/start_time_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/course_name"
        android:layout_alignBottom="@id/course_name"
        android:layout_marginRight="17dp"
        android:layout_toLeftOf="@+id/room_num_subject"
        android:text="@string/start_time" />

    <TextView
        android:id="@+id/description_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/room_num_subject"
        android:layout_below="@+id/room_num_subject"
        android:layout_marginTop="22dp"
        android:text="@string/description" />

</RelativeLayout>